# code-coverage

./: .gitignore  CMakeLists.txt  README.MD
include/: Calculadora.h
src/: Calculadora.cpp  main.cpp
tests/: CMakeLists.txt  README.MD  TEST.MD  testMetodos.md  test_Metodos.cpp  test_calculadora.cpp
